crates/ars-components/src/data_display/snapshots/ars_components__data_display__badge__tests__badge_root_default.snap
---
source: crates/ars-components/src/data_display/badge.rs
expression: "snapshot_attrs(&api(Props::new()).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "badge",
            ),
        ),
        (
            Data(
                "ars-size",
            ),
            String(
                "sm",
            ),
        ),
        (
            Data(
                "ars-variant",
            ),
            String(
                "subtle",
            ),
        ),
    ],
    styles: [],
}
